src/dialog/snapshots/rstv__dialog__filedlg__tests__snapshot_chdir_dialog.snap
---
source: src/dialog/filedlg.rs
expression: screen.snapshot()
---
size: 64x20
cursor: hidden
text:
|                                                                |
|                                                                |
|                ┌────────────── Change Directory ──────────────┐|
|                │                                              │|
|                │  Directory name                              │|
|                │   /home/user                            ▐↓▌  │|
|                │                                              │|
|                │  Directory tree                              │|
|                │   └─┬/                        ▲      OK   ▄  │|
|                │     └─┬home                   ▓    ▀▀▀▀▀▀▀▀  │|
|                │       └─┬user                 ▓              │|
|                │         └┬─projects           ▓    Chdir  ▄  │|
|                │          └─src                ▓    ▀▀▀▀▀▀▀▀  │|
|                │                               ▓              │|
|                │                               ▓    Revert ▄  │|
|                │                               ▓    ▀▀▀▀▀▀▀▀  │|
|                │                               ▓              │|
|                │                               ▼     Help  ▄  │|
|                │                                    ▀▀▀▀▀▀▀▀  │|
|                └──────────────────────────────────────────────┘|
attr:
|................................................................|
|................................................................|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaabaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaacccccccccccccccccccccccccccccccccccccccdedaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaabaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaeeeeheeeaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiigaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaeheeeeeeaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaeheeeeeeaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaaaaaaaaaaaaa|
|................aaafffffffffffffffffffffffffffffgaaaeeheeeeeaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|................aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(170,170,170)
  b fg=RGB(255,255,85) bg=RGB(170,170,170)
  c fg=RGB(255,255,255) bg=RGB(0,0,170)
  d fg=RGB(0,170,0) bg=RGB(170,170,170)
  e fg=RGB(0,0,0) bg=RGB(0,170,0)
  f fg=RGB(0,0,0) bg=RGB(0,170,170)
  g fg=RGB(0,0,170) bg=RGB(0,170,170)
  h fg=RGB(255,255,85) bg=RGB(0,170,0)
  i fg=RGB(255,255,255) bg=RGB(0,170,0)
