src/dialog/snapshots/rstv__dialog__filedlg__tests__snapshot_dir_list_box_tree.snap
---
source: src/dialog/filedlg.rs
expression: "render_dlb(&mut dlb, 30, 8)"
---
size: 30x8
cursor: hidden
text:
| └─┬/                         |
|   └─┬home                    |
|     └─┬oetiker               |
|       └┬─projects            |
|        ├─scratch             |
|        └─tmp                 |
|                              |
|                              |
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(0,170,170)
  b fg=RGB(255,255,255) bg=RGB(0,170,0)
