src/dialog/snapshots/rstv__dialog__filedlg__tests__snapshot_file_info_pane_file.snap
---
source: src/dialog/filedlg.rs
expression: "render_fip(&mut fip, 47, 3)"
---
size: 47x3
cursor: hidden
text:
| /home/oetiker/*.rs                            |
| report.t12345           Jun 15,2021  02:37p   |
|                                               |
attr:
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
|aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,170,170) bg=RGB(0,0,170)
